--- a/energy.html
+++ b/energy.html
@@ -10,12 +10,12 @@
     <div class="nev">
         <div class="nevbar">
             <div class="left">
-    <            <div class="left-logo"><img src="./photo/logo.png" height="40"/></div>
+    <            <div class="left-logo"><img src="logo.png" height="40"/></div>
                 <div class="left-logo-text"> Electric vehicle</div>
             </div>
 
             <div class="mid">
-                <a class="mid1" href="/index.html">Home</a>
+                <a class="mid1" href="index.html">Home</a>
                 <a class="mid1" href="#">Energy</a>
                 <a class="mid1" href="#">Mobility</a>
                 <a class="mid1" href="#">Agriculture</a>
