--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="nev">
                 <div class="nevbar">
                     <div class="left">
-            <            <div class="left-logo"><img src="./photo/logo.png" height="30"/></div>
+            <            <div class="left-logo"><img src="logo.png" height="30"/></div>
                         <div class="left-logo-text"> Electric vehicle</div>
                     </div>
 
@@ -75,7 +75,7 @@
                 <div class="service-pic2"></div>
             </div>
             
-            <a href="/energy.html" ><button class="service-para-button" type="button">Read More</button><a>
+            <a href="energy.html" ><button class="service-para-button" type="button">Read More</button><a>
         </div>
 
         <div class="revolution">
