--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
                     </div>
 
                     <div class="mid">
-                        <a class="mid1" href="#">Home</a>
-                        <a class="mid1" href="#">Energy</a>
+                        <a class="mid1" href="index.html">Home</a>
+                        <a class="mid1" href="energy.html">Energy</a>
                         <a class="mid1" href="#">Mobility</a>
                         <a class="mid1" href="#">Agriculture</a>
                         <a class="mid1" href="#">Careers</a>
-                        <a class="mid1" href="#">Resources</a>
                     </div>
                 </div>
             </div>
@@ -75,7 +74,7 @@
                 <div class="service-pic2"></div>
             </div>
             
-            <a href="energy.html" ><button class="service-para-button" type="button">Read More</button><a>
+            <a href="readmore.html" ><button class="service-para-button" type="button">Read More</button><a>
         </div>
 
         <div class="revolution">
