--- a/energy.html
+++ b/energy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Document</title>
     <link rel="stylesheet" href="energy.css">
 </head>
 <body>
@@ -20,46 +20,130 @@
                 <a class="mid1" href="#">Mobility</a>
                 <a class="mid1" href="#">Agriculture</a>
                 <a class="mid1" href="#">Careers</a>
-                <a class="mid1" href="#">Contact Us</a>
-                <a class="mid1" href="#">Resources</a>
             </div>
         </div>
     </div>
-    
+
     <div class="big-box1">
-        <div class="big-box1-content";>
-            <div class="big-box1-content-para1">Battery As A Service And Its Advantages</div>
+        <div class="big-box1-content1">
+            <div class="big-box1-content1-para1">Lithium Battery</div>
         </div>
     </div>
-    <div class="service-para">
-        <div class="service-para-content1">
-            <div class="service-para-content1-text1">What is BaaS - Battery-as-a-Service?</div>
-            <div class="service-para-content1-photo"></div>
-            <div class="service-para-content1-text2">Battery-as-a-Service is a unique way that allows customers to keep their vehicles charged up and running, without having to worry about recharging drained-out batteries or replacing them. The concept enables customers to lease out batteries as a separate component from the car, on a subscription-based model, and swap it for a fully charged one as and when it depletes power.
+
+    <div class="empowering">
+        <div class="empoering-bignev">
+            <div class="empoering-content">
+                <div class="empoering-content-pic">Discover Cutting-Edge Lithium Battery Solutions for Your Every Need</div>
+                <div class="empoering-content-para">
+                    <div class="empoering-content-para-text1">Energy storage is a key component of the transition to a cleaner and more resilient energy system. Whether you need energy solutions to power your business, or for your electric vehicles, or to store excess solar power, backup your home or business during grid outages, or optimize your energy consumption and costs, we might have the right solution for you.
+                    </div>
+                    <br>
+                    <div class="empoering-content-para-text2">
+                        At DeepValley, we take pride in offering a comprehensive range of lithium battery products and services that cater to both individuals and businesses. Whether you're in need of a reliable energy source for your light electric vehicles (LEVs) or seeking top-notch home backup systems, we have the perfect solution for you. With our advanced technology and commitment to excellence, we are your trusted partner in empowering the future of energy. 
+                    </div>
+                </div>
             </div>
-            <div class="service-para-content1-text2">The concept makes for a great first step, for both businesses and customers, toward sustainability. While battery-powered vehicles undoubtedly reduce fossil fuel consumption, the BaaS model further helps to offset carbon emissions, with solar-powered charge stations, shared mobility services, and more. As a result, the data-driven BaaS model adds potential for flexibility and scalability for businesses and fulfilling experiences for customers.
-            </div>
-        </div>
-        <div class="service-para-content2">
-            <div class="service-para-content2-text1">What are the advantages of the Battery-as-a-Service Model?</div>
-            <ul>BaaS makes for a perfect model for those who are always on the go.
-            <li>Ready access to charged-up batteries, from intelligently set up swapping stations, ensures the availability of a reliable power source at all times.</li>
-            <li>Customers aren't required to worry about the cost of buying or maintaining a battery.</li>
-            <li>BaaS addresses incessant EV issues such as range anxiety and time-consuming charging process.</li>
-            <li>Since the battery makes up for a considerable chink of the cost of an electric car (30-40%), the upfront buying costs go down.</li>
-            <li>BaaS provides a solution for EV charging within city limits, for homes that do not have access to plug-in charge points.</li>
-            <li>Car owners get the flexibility to choose from a variety of subscription plans, based on their dynamic usage trends, availability as well as driving behaviour.</li>
-            <li>The BaaS model also brings down the cost of setting up a retail charging station for EVs, and instead relies on vehicular data to identify EV hot spots.</li>
-            </ul>
         </div>
     </div>
+
+    <div class="product-boxes">
+        <div class="product-box-main-heading">Our Product Offerings:</div>
+        <div class="product-box">
+            <div class="product-box-heading">Lithium Batteries for Light Electric Vehicles (LEVs): </div>
+            <div class="product-box-text">Experience the power and performance of our lithium batteries specifically designed for LEVs. From electric 3-wheelers to special purpose vehicles, our batteries provide long-lasting energy, enabling you to travel further and faster with ease. Say goodbye to the limitations of traditional batteries and embrace the future of sustainable mobility. </div>
+        </div>
+        <div class="product-box">
+            <div class="product-box-heading">Home Backup Systems: </div>
+            <div class="product-box-text">Ensure uninterrupted power supply with our high-quality home backup systems. Our  
+
+                lithium batteries store energy efficiently, allowing you to keep your essential appliances running during power outages. Whether it's for emergency situations or planned maintenance, our home backup systems give you the peace of mind you deserve. </div>
+        </div>
+        <div class="product-box">
+            <div class="product-box-heading">Customized Energy Solutions:</div>
+            <div class="product-box-text">We understand that each customer has unique energy requirements. That's why we offer customized solutions tailored to your specific needs. Our team of experts will work closely with you to design and implement a bespoke energy system, optimizing performance and efficiency. From off-grid solutions to hybrid systems, we have the expertise to bring your vision to life. </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="service-boxes">
+        <div class="service-box-main-heading">Our Service Offerings:</div>
+        <div class="service-box">
+            <div class="service-box-heading">Battery Installation and Integration: </div>
+            <div class="service-box-text"> Ensuring a seamless integration of lithium batteries into your LEVs or home energy systems is crucial for optimal performance. Our skilled technicians are trained to handle battery installations with precision and expertise. Trust us to get your systems up and running smoothly.</div>
+
+            <div class="service-box-heading">Maintenance and Support:</div>
+            <div class="service-box-text"> We believe in providing long-term support for our customers. Our maintenance services include regular inspections, performance checks, and battery optimization to maximize efficiency and lifespan. Count on us to keep your energy systems running at their best.</div>
+
+            <div class="service-box-heading">Consultation and Design:</div>
+            <div class="service-box-text">Unsure about the best energy solution for your specific needs? Our team of experts is here to help. We offer consultation services to assess your requirements, provide insights, and recommend the most suitable lithium battery systems. Together, we will design a solution that aligns with your goals and budget. </div>
+
+            <div class="service-box-heading">Training and Education: </div>
+            <div class="service-box-text">We believe in empowering our customers with knowledge. Through our training and education programs, we provide valuable information about lithium batteries, their maintenance, and best practices. Equip yourself with the necessary skills and expertise to make the most out of your energy syservice</div>
+        </div>
+    </div>
+
+    <div class="quality">
+        <div class="quality-heading">Experience Unmatched Quality and Performance Today!</div>
+        <div class="quality-text">When you choose DeepValley, you choose uncompromising quality and unmatched performance. Our lithium battery products and services are backed by years of expertise and a commitment to excellence. Whether you're a homeowner, business owner, or LEV enthusiast, we have the perfect solution to meet your energy needs. </div>
+        <br>
+        <div class="quality-text">Contact us today to explore our product offerings, discuss your requirements, and discover how our lithium battery solutions can revolutionize your energy landscape. Together, let's embrace a sustainable future powered by the latest advancements in energy technology. </div>
+    </div>
+
 
     <div class="footer">
         <div class="footer-box">
-            <div class="footer-box-text">DeepVally © All Rights Reserved 2023</div>
+            <div class="footer-box1">
+                <div class="footer-box1-upper-text">Wait No More. Reach us NOW and take the leap of faith and trust.</div>
+                <div class="footer-box1-inner">
+                    <div class="footer-box1-form">
+                        <div class="footer-box1-form-text">Submit the below form, and we will reach you as soon as we find your contact point. </div>
+                        <div class="footer-box1-form-input">
+                            <input placeholder="Enter your name" class="footer-input">
+                            <input placeholder="Enter your Email" class="footer-input">
+                            <input placeholder="Enter your Phone Number" class="footer-input">
+                        </div>
+                        <button class="footer-box1-submit" type="button">SUBMIT</button>
+                    </div>
+                    <div class="footer-box2-text">
+                        <div class="footer-box2-text1">Type of Contact:</div>
+                        <ul>
+                            <li>Interested in a Product</li>
+                            <li>Interested in a Service </li>
+                            <li>Work for Bihar </li>
+                            <li>Work for India</li>
+                            <li>Work for our vision (Joining deepvalley) </li>
+                            <li>Ascent Leadership Program </li>
+                            <li>Other types of contact </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-box2">
+                <div class="contactus">
+                    <div class="contactus-text">Contact-Us</div>
+                    <div class="contactus-whatsup">Oh, and btw did we tell you, you can also connect and chat with us directly on WhatsApp. Scan this^</div>
+                    <div class="contactus-phone"> 
+                        <div class="contactus-phone-heading">Phone:</div>
+                        <div class="contactus-phone-text">8757977109 </div>
+                    </div>
+                    <div class="contactus-email"> 
+                        <div class="contactus-email-heading">Email:</div>
+                        <div class="contactus-email-text">connect@deepvalley.in</div>
+                    </div>
+                </div>
+                <div class="address">
+                    <div class="address-text">Address</div>
+                    <div class="address-box">Chandi Road, Near Bahadurpur, Harnaut, Nalanda, Bihar 803110 </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-last">
+            <div class="footer-lastbox">
+                <div class="footer-lastbox-text">DeepVally © All Rights Reserved 2023</div>
+            </div>
         </div>
     </div>
-
-    
 </body>
 </html>
