--- a/energy.html
+++ b/energy.html
@@ -16,8 +16,8 @@
 
             <div class="mid">
                 <a class="mid1" href="index.html">Home</a>
-                <a class="mid1" href="#">Energy</a>
-                <a class="mid1" href="#">Mobility</a>
+                <a class="mid1" href="energy.html">Energy</a>
+                <a class="mid1" href="mobility.html">Mobility</a>
                 <a class="mid1" href="#">Agriculture</a>
                 <a class="mid1" href="#">Careers</a>
             </div>
