--- a/readmore.html
+++ b/readmore.html
@@ -17,7 +17,7 @@
             <div class="mid">
                 <a class="mid1" href="index.html">Home</a>
                 <a class="mid1" href="energy.html">Energy</a>
-                <a class="mid1" href="#">Mobility</a>
+                <a class="mid1" href="mobility.html">Mobility</a>
                 <a class="mid1" href="#">Agriculture</a>
                 <a class="mid1" href="#">Careers</a>
             </div>
@@ -54,7 +54,55 @@
 
     <div class="footer">
         <div class="footer-box">
-            <div class="footer-box-text">DeepVally © All Rights Reserved 2023</div>
+            <div class="footer-box1">
+                <div class="footer-box1-upper-text">Wait No More. Reach us NOW and take the leap of faith and trust.</div>
+                <div class="footer-box1-inner">
+                    <div class="footer-box1-form">
+                        <div class="footer-box1-form-text">Submit the below form, and we will reach you as soon as we find your contact point. </div>
+                        <div class="footer-box1-form-input">
+                            <input placeholder="Enter your name" class="footer-input">
+                            <input placeholder="Enter your Email" class="footer-input">
+                            <input placeholder="Enter your Phone Number" class="footer-input">
+                        </div>
+                        <button class="footer-box1-submit" type="button">SUBMIT</button>
+                    </div>
+                    <div class="footer-box2-text">
+                        <div class="footer-box2-text1">Type of Contact:</div>
+                        <ul>
+                            <li>Interested in a Product</li>
+                            <li>Interested in a Service </li>
+                            <li>Work for Bihar </li>
+                            <li>Work for India</li>
+                            <li>Work for our vision (Joining deepvalley) </li>
+                            <li>Ascent Leadership Program </li>
+                            <li>Other types of contact </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-box2">
+                <div class="contactus">
+                    <div class="contactus-text">Contact-Us</div>
+                    <div class="contactus-whatsup">Oh, and btw did we tell you, you can also connect and chat with us directly on WhatsApp. Scan this^</div>
+                    <div class="contactus-phone"> 
+                        <div class="contactus-phone-heading">Phone:</div>
+                        <div class="contactus-phone-text">8757977109 </div>
+                    </div>
+                    <div class="contactus-email"> 
+                        <div class="contactus-email-heading">Email:</div>
+                        <div class="contactus-email-text">connect@deepvalley.in</div>
+                    </div>
+                </div>
+                <div class="address">
+                    <div class="address-text">Address</div>
+                    <div class="address-box">Chandi Road, Near Bahadurpur, Harnaut, Nalanda, Bihar 803110 </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-last">
+            <div class="footer-lastbox">
+                <div class="footer-lastbox-text">DeepVally © All Rights Reserved 2023</div>
+            </div>
         </div>
     </div>
 
